--- a/style.css
+++ b/style.css
@@ -1,51 +1,24 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: monospace;
-    font-size: 15px;
-    margin: 1px;
+    font-size: 14px;
     color: lightblue;
 }
 
 window#waybar {
-    background-color: transparent;
-    color: lightblue;
-    border-radius: 10px;
+    background-color: rgba(0,0,0,0.7);
     }
 
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
 .modules-center {
-	background-color: rgba(0,0,0,0.7);
-	border-radius: 10px;
+	background-color: rgba(0,0,0,0.0);
 }
 .modules-left {
-	background-color: rgba(0,0,0,0.7);
-	border-radius: 10px;
+	background-color: rgba(0,0,0,0.0);
 }
 
 .modules-right {
-	background-color: rgba(0,0,0,0.7);
-	border-radius: 10px;
+	background-color: rgba(0,0,0,0.0);
+	padding-left: 8px;
 }
 
 button {
@@ -53,20 +26,17 @@ button {
     box-shadow: inset 0 -3px transparent;
     /* Avoid rounded borders under each button name */
     border: none;
-    border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background-color: rgba(0,0,0,0);
     box-shadow: inset 0 -3px rgba(0,0,0,0.2);
-    border-radius: 5px;
 }
 
 /* you can set a style on hover for any module like this */
 #pulseaudio:hover {
     background-color: rgba(255,255,255,0.1);
-    border-radius: 10px;
 }
 
 #workspaces button {
@@ -75,22 +45,16 @@ button:hover {
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
 }
 
 #workspaces button.focused, #workspaces button.active {
     background-color: rgba(255,255,255,0.1);
-    border-radius: 10px;
+    border-radius: 0px;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#mode {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #000000;
+    background-color: rgba(255,0,0,0.4); /*#eb4d4b;*/
 }
 
 #clock,
@@ -119,28 +83,9 @@ button:hover {
     margin: 0 4px;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
 #clock {
-    color: lightblue;
-}
-
-#battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+    color: rgb(200,180,235);
+    border-bottom: 3px solid rgb(200,180,235);
 }
 
 @keyframes blink {
@@ -150,48 +95,18 @@ button:hover {
     }
 }
 
-/* Using steps() instead of linear as a timing function to limit cpu usage */
-#battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-#power-profiles-daemon {
-    padding-right: 15px;
-}
-
-#power-profiles-daemon.performance {
-    background-color: #f53c3c;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.balanced {
-    background-color: #2980b9;
-    color: #ffffff;
-}
-
-#power-profiles-daemon.power-saver {
-    background-color: #2ecc71;
-    color: #000000;
-}
-
 label:focus {
     background-color: #000000;
 }
 
 #cpu {
-    background-color: transparent;
-    color: lightblue;
+    color: rgb(150,150,235);
+    border-bottom: 3px solid  rgb(150,150,235);
 }
 
 #memory {
-    background-color: transparent;
-    color: lightblue;
+    color: rgb(125,125,235);
+    border-bottom: 3px solid rgb(125,125,235);
 }
 
 #disk {
@@ -200,6 +115,21 @@ label:focus {
 
 #backlight {
     background-color: #90b1b1;
+}
+
+#custom-cpu_temp {
+	color: rgb(150,150,235);
+	border-bottom: 3px solid rgb(150,150,235);
+}
+
+#custom-gpu_usage {
+	color: rgb(190,190,235);
+	border-bottom: 3px solid rgb(190,190,235);
+}
+
+#custom-vpn {
+	color: rgb(220,220,235);
+	border-bottom: 3px solid rgb(220,220,235);
 }
 
 #network {
@@ -212,12 +142,14 @@ label:focus {
 
 #pulseaudio {
     background-color: rgba(0, 0, 0, 0);
-    color: lightblue;
+    color: rgb(190,130,235);
+    border-bottom: 3px solid rgb(190,130,235);
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
+    background-color: transparent;
+    color: rgb(190,130,235);
+    border-bottom: 3px solid rgb(190,130,235);
 }
 
 #wireplumber {
